--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -31,9 +31,18 @@ eureka:
     client:
         service-url:
             defaultZone: http://eureka7001.com:7001/eureka/  
+    instance:
+        instance-id: dept-8001.com
+        perfer-ip-address: true
+
+info:
+    app.name: atguigu-microservicecloud-springcloudconfig01
+    company.name: www.atguigu.com
+    build.artifactId: $project.artifactId$
+    build.version: $project.version$
 ---
 server:
-    port: 7001  #注册中心占用7001端口，冒号后面必须要有空格
+    port: 8001
     
 spring:
     profiles: test
@@ -42,7 +51,7 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: org.gjt.mm.mysql.Driver
-        url: jdbc:mysql://localhost:3306/cloudDB01
+        url: jdbc:mysql://localhost:3306/cloudDB02
         username: root
         password: 123456
         dbcp2:
@@ -60,4 +69,12 @@ eureka:
     client:
         service-url:
             defaultZone: http://eureka7001.com:7001/eureka/  
-        
+    instance:
+        instance-id: dept-8002.com
+        perfer-ip-address: true
+
+info:
+    app.name: atguigu-microservicecloud-springcloudconfig02
+    company.name: www.atguigu.com
+    build.artifactId: $project.artifactId$
+    build.version: $project.version$
